--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -34,5 +34,5 @@ jobs:
         run: npm install
 
       - name: Execute Linter
-        run: npm run lint
+        run: npm run lint --workspaces
         continue-on-error: false
