feat(TRON-29|TRON-30): fixed issue with workspaces not running child packages from highest level

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm ci
 
       - name: Build Release
-        run: npm run release:build
+        run: npm run release:build --workspaces
         continue-on-error: false
 
   push_to_registry:
