--- a/.github/workflows/dev-build.yml
+++ b/.github/workflows/dev-build.yml
@@ -34,5 +34,5 @@ jobs:
         run: npm install
 
       - name: Build Dev
-        run: npm run build --workspaces
+        run: npm run dev:build --workspaces
         continue-on-error: false
