--- a/.github/workflows/docker-dev.yml
+++ b/.github/workflows/docker-dev.yml
@@ -1,21 +1,17 @@
-name: Docker Publish
+name: Docker Development
 
 on:
   workflow_call:
     secrets:
-      docker_username:
-        required: true
-      docker_token:
-        required: true
-      docker_tag:
-        required: true
       npm_token:
         required: true
 
 jobs:
   build:
-    name: build docker
+    name: build image
+    timeout-minutes: 10
     runs-on: ubuntu-latest
+
     steps:
       - name: checkout actions
         uses: actions/checkout@master
