--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -2,13 +2,22 @@ name: Docker Release
 
 on:
   workflow_call:
+    inputs:
+      node_env:
+        type: string
+        required: false
+        default: production
+      node_mode:
+        type: string
+        required: false
+        default: production
     secrets:
       npm_token:
-        required: true
+        required: false
 
 jobs:
   build:
-    name: build docker
+    name: release docker
     timeout-minutes: 10
     runs-on: ubuntu-latest
 
@@ -21,6 +30,8 @@ jobs:
         env:
           docker_target: release
           npm_token: ${{ secrets.npm_token }}
+          node_env: ${{ inputs.node_env }}
+          node_mode: ${{ inputs.node_mode }}
         continue-on-error: false
 
       - name: stop containers
