--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -7,9 +7,13 @@ on:
         type: string
         required: false
         default: development
+      node_mode:
+        type: string
+        required: false
+        default: test
     secrets:
       npm_token:
-        required: true
+        required: false
 
 jobs:
   build:
@@ -27,6 +31,7 @@ jobs:
           docker_target: test
           npm_token: ${{ secrets.npm_token }}
           node_env: ${{ inputs.node_env }}
+          node_mode: ${{ inputs.node_mode }}
         continue-on-error: false
 
       - name: stop containers
