feat(PLAT-112): updated build flows

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,22 +3,22 @@ name: Docker Build
 on:
   workflow_call:
     inputs:
-      build_target:
+      BUILD_TARGET:
         type: string
         required: false
         default: release
-      node_env:
+      NODE_ENV:
         type: string
         required: false
         default: production
-      vite_mode:
+      VITE_MODE:
         type: string
         required: false
         default: production
 
 jobs:
   build:
-    name: ${{ inputs.build_target }} ${{ inputs.node_env }} ${{ inputs.vite_mode }}
+    name: ${{ inputs.BUILD_TARGET }} ${{ inputs.NODE_ENV }} ${{ inputs.VITE_MODE }}
     timeout-minutes: 10
     runs-on: ubuntu-latest
 
@@ -29,9 +29,9 @@ jobs:
       - name: start containers
         run: docker compose -f "docker-compose.yml" up --build --abort-on-container-exit
         env:
-          build_target: ${{ inputs.build_target }}
-          node_env: ${{ inputs.node_env }}
-          vite_mode: ${{ inputs.vite_mode }}
+          BUILD_TARGET: ${{ inputs.BUILD_TARGET }}
+          NODE_ENV: ${{ inputs.NODE_ENV }}
+          VITE_MODE: ${{ inputs.VITE_MODE }}
         continue-on-error: false
 
       - name: stop containers
