--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -54,7 +54,6 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         id: push-to-ecr
         env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           BUILD_TARGET: ${{ inputs.BUILD_TARGET }}
           NODE_ENV: ${{ inputs.NODE_ENV }}
           VITE_MODE: ${{ inputs.VITE_MODE }}
@@ -63,7 +62,7 @@ jobs:
           AWS_REGION: ${{ inputs.AWS_REGION }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build --target $BUILD_TARGET --build-arg NPM_TOKEN=$NPM_TOKEN -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build --target $BUILD_TARGET -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
